--- a/frontend/styles/common/_reset.scss
+++ b/frontend/styles/common/_reset.scss
@@ -56,7 +56,7 @@ input{
   height: 45px;
   border: 1px solid $borderColor;
   border-radius: 2px;
-  color: #747b86;
+  //color: #747b86;
   font-size: 16px;
 }
 label{
@@ -129,6 +129,7 @@ h6{
 }
 a{
   color: $pcolor;
+  text-decoration: none;
 }
 .form-group{
   margin-bottom: 20px;
