--- a/frontend/styles/components/_breadcrumb.scss
+++ b/frontend/styles/components/_breadcrumb.scss
@@ -14,7 +14,7 @@
     color: #fff;
     font-weight: 500;
     font-size: 30px;
-    text-transform: capitalize;
+    position: relative;
   }
   .breadcrumb{
     padding-bottom: 17px;
