Visual editor max height

--- a/frontend/components/ui/admin/mdx-editor.module.css
+++ b/frontend/components/ui/admin/mdx-editor.module.css
@@ -1,5 +1,8 @@
-.editor {
+.editor :global(.mdxeditor-root-contenteditable) {
     min-width: 400px;
+    min-height: 150px;
+    max-height: 30vh;
+    overflow-y: scroll;
 }
 
 .prose ul {
